更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -12,17 +12,21 @@ CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_TIMEOUT=2
 
 # ======================
-# 编译工具链与优化
+# 编译工具链与优化 - 修复版本
 # ======================
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
-CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
+CONFIG_USE_LLVM=y
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y
-CONFIG_KERNEL_LTO=y
-CONFIG_KERNEL_OPTIMIZE_O3=y
-CONFIG_CC_OPTIMIZE_O3=y
+CONFIG_KERNEL_LLVM=y
+CONFIG_LLVM_TARGET_ARCH="x86_64"
+CONFIG_LLVM_TARGETS="X86"
+CONFIG_LLVM_VERSION=16
+CONFIG_USE_LTO_LLVM=y
+
+# 优化配置统一
+CONFIG_EXTRA_OPTIMIZATION="-O3 -pipe -march=x86-64-v2"
+CONFIG_TARGET_OPTIMIZATION="-O3 -pipe -march=x86-64-v2"
 CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
