--- a/.github/workflows/build-llvm-openwrt.yml
+++ b/.github/workflows/build-llvm-openwrt.yml
@@ -1,4 +1,4 @@
-name: OpenWrt Full LLVM Builder
+name: OpenWrt 完整 LLVM 构建器
 
 on:
   repository_dispatch:
@@ -22,17 +22,17 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-    - name: Checkout
+    - name: 检出代码
       uses: actions/checkout@v4
 
-    - name: Add LLVM Repository
+    - name: 添加 LLVM 软件源
       run: |
         wget -q https://apt.llvm.org/llvm.sh
         chmod +x llvm.sh
         sudo ./llvm.sh ${LLVM_VERSION}
         rm llvm.sh
 
-    - name: Install Complete LLVM/Clang Toolchain
+    - name: 安装完整 LLVM/Clang 工具链
       run: |
         sudo apt-get update
         sudo apt-get install -y \
@@ -52,7 +52,7 @@ jobs:
         sudo update-alternatives --install /usr/bin/lld lld /usr/bin/lld-${LLVM_VERSION} 100
         sudo update-alternatives --install /usr/bin/ld.lld ld.lld /usr/bin/ld.lld-${LLVM_VERSION} 100
 
-    - name: Install Build Dependencies
+    - name: 安装构建依赖
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -71,7 +71,7 @@ jobs:
         sudo mkdir -p /workdir
         sudo chown -R $USER:$USER /workdir
 
-    - name: Setup LLVM Environment
+    - name: 设置 LLVM 环境
       run: |
         echo "CC=clang" >> $GITHUB_ENV
         echo "CXX=clang++" >> $GITHUB_ENV
@@ -80,14 +80,14 @@ jobs:
         echo "NM=llvm-nm" >> $GITHUB_ENV
         echo "STRIP=llvm-strip" >> $GITHUB_ENV
 
-    - name: Clone source code
+    - name: 克隆源代码
       working-directory: /workdir
       run: |
         df -hT $PWD
         git clone --depth=1 $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
-    - name: Load custom feeds
+    - name: 加载自定义软件源
       run: |
         if [[ -f $FEEDS_CONF ]]; then
           cp $FEEDS_CONF openwrt/feeds.conf.default
@@ -98,17 +98,17 @@ jobs:
           bash $GITHUB_WORKSPACE/$DIY_P1_SH
         fi
 
-    - name: Update feeds
+    - name: 更新软件源
       run: |
         cd openwrt
         ./scripts/feeds update -a
 
-    - name: Install feeds
+    - name: 安装软件源
       run: |
         cd openwrt
         ./scripts/feeds install -a
 
-    - name: Setup LLVM Configuration
+    - name: 设置 LLVM 配置
       run: |
         cd openwrt
         # 先创建基础配置
@@ -129,7 +129,7 @@ jobs:
           echo "CONFIG_TARGET_OPTIMIZATION=\"-O3 -pipe -march=x86-64-v2\""
         } >> .config
 
-    - name: Load custom configuration
+    - name: 加载自定义配置
       run: |
         if [[ -d files ]]; then
           cp -r files openwrt/files
@@ -143,33 +143,33 @@ jobs:
           bash $GITHUB_WORKSPACE/$DIY_P2_SH
         fi
 
-    - name: Verify LLVM Toolchain
+    - name: 验证 LLVM 工具链
       run: |
         cd openwrt
-        echo "=== Verifying LLVM Toolchain ==="
-        clang --version || echo "clang not found"
-        ld.lld --version || echo "lld not found"
+        echo "=== 验证 LLVM 工具链 ==="
+        clang --version || echo "clang 未找到"
+        ld.lld --version || echo "lld 未找到"
         echo "CC: $CC"
         echo "CXX: $CXX"
         echo "LD: $LD"
 
-    - name: Download packages
+    - name: 下载软件包
       run: |
         cd openwrt
         make defconfig
-        echo "=== LLVM Config Check ==="
-        grep "CONFIG.*LLVM" .config || echo "No LLVM config found"
-        echo "=== Optimization Flags ==="
-        grep "OPTIMIZATION" .config || echo "No optimization config found"
+        echo "=== LLVM 配置检查 ==="
+        grep "CONFIG.*LLVM" .config || echo "未找到 LLVM 配置"
+        echo "=== 优化标志 ==="
+        grep "OPTIMIZATION" .config || echo "未找到优化配置"
         make download -j$(nproc)
         # 清理损坏的下载文件
         find dl -size -1024c -delete
 
-    - name: Compile with LLVM Toolchain
+    - name: 使用 LLVM 工具链编译
       id: compile
       run: |
         cd openwrt
-        echo "Starting O3 optimized compilation with $(nproc) threads..."
+        echo "开始使用 O3 优化编译，使用 $(nproc) 个线程..."
         
         # 设置编译环境
         export CC=clang
@@ -180,12 +180,12 @@ jobs:
         if make -j$(nproc); then
           echo "status=success" >> $GITHUB_OUTPUT
         else
-          echo "Parallel compilation failed, trying single thread..."
+          echo "并行编译失败，尝试单线程编译..."
           if make -j1 V=s; then
             echo "status=success" >> $GITHUB_OUTPUT
           else
             echo "status=failure" >> $GITHUB_OUTPUT
-            echo "Compilation failed completely"
+            echo "编译完全失败"
             exit 1
           fi
         fi
@@ -197,16 +197,16 @@ jobs:
         fi
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    - name: Check build results
+    - name: 检查构建结果
       if: steps.compile.outputs.status == 'success'
       run: |
         cd openwrt
-        echo "=== Build Results ==="
+        echo "=== 构建结果 ==="
         find bin/targets -name "*.img" -o -name "*.gz" -o -name "*.bin" | head -10
-        echo "=== Firmware Size ==="
+        echo "=== 固件大小 ==="
         ls -lh bin/targets/*/*/
 
-    - name: Organize firmware files
+    - name: 整理固件文件
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
       id: organize
       run: |
@@ -216,33 +216,33 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
-    - name: Upload firmware artifacts
+    - name: 上传固件制品
       uses: actions/upload-artifact@v4
       if: steps.organize.outputs.status == 'success'
       with:
-        name: OpenWrt-LLVM-O3-Firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        name: OpenWrt-LLVM-O3-固件${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
         retention-days: 7
 
-    - name: Create Release
+    - name: 创建发布版本
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: llvm-o3-build-$(date +%Y%m%d-%H%M)
-        name: LLVM O3 Optimized OpenWrt $(date +%Y-%m-%d)
+        tag_name: llvm-o3-构建-$(date +%Y%m%d-%H%M)
+        name: LLVM O3 优化 OpenWrt $(date +%Y-%m-%d)
         body: |
-          OpenWrt firmware compiled with LLVM/Clang toolchain and O3 optimization
+          使用 LLVM/Clang 工具链和 O3 优化编译的 OpenWrt 固件
           
-          - Compiler: Clang ${LLVM_VERSION}
-          - Linker: LLD
-          - Optimization: O3 with x86-64-v2
-          - LTO: Enabled
-          - Build date: $(date)
+          - 编译器: Clang ${LLVM_VERSION}
+          - 链接器: LLD
+          - 优化级别: O3 带 x86-64-v2
+          - LTO: 已启用
+          - 构建日期: $(date)
         files: ${{ env.FIRMWARE }}/*
 
-    - name: Cleanup
+    - name: 清理工作空间
       if: always()
       run: |
         sudo rm -rf /workdir/openwrt
