更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -18,7 +18,8 @@ CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-
+CONFIG_GCC_OPTIMIZE_FAST_MATH=y
+CONFIG_GCC_OPTIMIZE_FOR_PERFORMANCE=y
 # 优化配置统一
 CONFIG_EXTRA_OPTIMIZATION="-O3 -pipe -march=x86-64-v2"
 CONFIG_TARGET_OPTIMIZATION="-O3 -pipe -march=x86-64-v2"
