更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -14,7 +14,7 @@ CONFIG_GRUB_TIMEOUT=2
 # ======================
 # 编译工具链与优化 - GCC版本
 # ======================
-CONFIG_DEVEL=y
+# CONFIG_DEVEL is not set
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
