更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -14,6 +14,7 @@ CONFIG_GRUB_TIMEOUT=1
 # ======================
 # 编译工具链与优化 - GCC极致优化
 # ======================
+CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_GCC_USE_GRAPHITE=y
 CONFIG_GCC_USE_LTO=y
