--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -16,11 +16,11 @@ CONFIG_GRUB_TIMEOUT=1
 # ======================
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
-CONFIG_GCC_USE_GRAPHITE=y
-CONFIG_GCC_USE_LTO=y
+CONFIG_USE_GRAPHITE=y
+CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-CONFIG_GCC_OPTIMIZE_FAST_MATH=y
-CONFIG_GCC_OPTIMIZE_FOR_PERFORMANCE=y
+CONFIG_OPTIMIZE_FAST_MATH=y
+CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_TARGET_OPTIMIZATION="-O3 -march=goldmont-plus -mtune=goldmont-plus -pipe"
 CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
