更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -14,15 +14,12 @@ CONFIG_GRUB_TIMEOUT=1
 # ======================
 # 编译工具链与优化 - GCC极致优化
 # ======================
-CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_GCC_USE_GRAPHITE=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
 CONFIG_GCC_OPTIMIZE_FAST_MATH=y
-CONFIG_GCC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_TARGET_OPTIMIZATION="-O3 -march=goldmont-plus -mtune=goldmont-plus -pipe"
-CONFIG_OPTIMIZE_FOR_SIZE=n
+CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe"
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_USE_MKLIBS=n
