--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -257,7 +257,10 @@ CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_sed=y
+CONFIG_PACKAGE_gawk=y
+CONFIG_PACKAGE_grep=y
+CONFIG_PACKAGE_coreutils-sort=y
 
 # ======================
 # LuCI应用模块 (基础)
