--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -162,6 +162,69 @@ CONFIG_PCI_PRI=y
 CONFIG_PCI_PASID=y
 
 # ======================
+# BPF系统核心配置
+# ======================
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_JIT_DEFAULT_ON=y
+CONFIG_HAVE_EBPF_JIT=y
+CONFIG_BPF_EVENTS=y
+CONFIG_BPF_STREAM_PARSER=y
+CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y
+CONFIG_BPF_PRELOAD=y
+CONFIG_BPF_PRELOAD_UMD=y
+
+# ======================
+# BPF高级功能支持
+# ======================
+CONFIG_BPF_LSM=y
+CONFIG_LSM="landlock,lockdown,yama,integrity,bpf"
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_USERMODE_DRIVER=y
+CONFIG_BPF_KPROBE_OVERRIDE=y
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_BPFILTER=y
+CONFIG_BPFILTER_UMH=y
+CONFIG_TEST_BPF=y
+CONFIG_CGROUP_BPF=y
+CONFIG_BPF_LIRC_MODE2=y
+
+# ======================
+# XDP核心配置 (eXpress Data Path)
+# ======================
+CONFIG_XDP_SOCKETS=y
+CONFIG_XDP_SOCKETS_DIAG=y
+CONFIG_XDP_UMEM=y
+CONFIG_XDP_UMEM_UNALIGNED=y
+CONFIG_XDP_UMEM_UNALIGNED_CHUNK_FLAG=y
+CONFIG_XSK_UMEM_DMA_BIDIRECTIONAL=y
+CONFIG_XDP_FRAMES=y
+
+# ======================
+# XDP硬件卸载支持
+# ======================
+CONFIG_NET_XDP=y
+CONFIG_NET_XDP_OFFLOAD=y
+CONFIG_XDP_HW_OFFLOAD=y
+CONFIG_XDP_REDIRECT=y
+CONFIG_XDP_TX=y
+CONFIG_XDP_RX=y
+CONFIG_XDP_MULTI_BUFF=y
+CONFIG_XDP_SHARED_UMEM=y
+
+# ======================
+# 网络驱动XDP支持
+# ======================
+CONFIG_IGC_XDP=y
+CONFIG_IGC_XDP_REDIRECT=y
+CONFIG_IGC_XDP_TX=y
+CONFIG_IGC_XDP_FRAME=y
+CONFIG_IGC_XDP_SHARED_UMEM=y
+
+# ======================
 # 网络协议栈硬件卸载
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR=y
@@ -247,21 +310,6 @@ CONFIG_NFT_QUEUE=y
 CONFIG_NFT_COMPAT=y
 
 # ======================
-# XDP快速数据路径 (硬件卸载)
-# ======================
-CONFIG_XDP_SOCKETS=y
-CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_BPF_STREAM_PARSER=y
-CONFIG_NET_SOCK_MSG=y
-CONFIG_NET_XDP=y
-
-# ======================
 # I/O调度与存储优化
 # ======================
 CONFIG_MQ_IOSCHED_DEADLINE=y
@@ -305,10 +353,23 @@ CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-macsec=y
 CONFIG_PACKAGE_kmod-dma-buf=y
 CONFIG_PACKAGE_kmod-dma-heap=y
+
+# ======================
+# BPF和XDP内核模块
+# ======================
+CONFIG_PACKAGE_kmod-bpf-testmod=y
+CONFIG_PACKAGE_kmod-bpfilter=y
+CONFIG_PACKAGE_kmod-xdp-sockets=y
+CONFIG_PACKAGE_kmod-xdp-redirect=y
+CONFIG_PACKAGE_kmod-xdp-tx=y
+CONFIG_PACKAGE_kmod-xdp-rx=y
+CONFIG_PACKAGE_kmod-xdp-multi-buff=y
+CONFIG_PACKAGE_kmod-xdp-hw-offload=y
 
 # ======================
 # 加密与硬件加速 (AES-NI)
@@ -347,6 +408,30 @@ CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_pciutils=y
 
 # ======================
+# BPF和XDP用户态工具
+# ======================
+CONFIG_PACKAGE_bpftool=y
+CONFIG_PACKAGE_bpf-headers=y
+CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_xdp-tools=y
+CONFIG_PACKAGE_xdp-filter=y
+CONFIG_PACKAGE_xdp-loader=y
+CONFIG_PACKAGE_xdpdump=y
+CONFIG_PACKAGE_bpftrace=y
+CONFIG_PACKAGE_ebpf=y
+
+# ======================
+# 性能监控与调试工具
+# ======================
+CONFIG_PACKAGE_perf=y
+CONFIG_PACKAGE_trace-cmd=y
+CONFIG_PACKAGE_libpfm4=y
+CONFIG_PACKAGE_linux-tools=y
+CONFIG_PACKAGE_linux-tools-perf=y
+CONFIG_PACKAGE_linux-tools-bpftool=y
+
+# ======================
 # LuCI应用模块 (网络优化版)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -360,3 +445,14 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
+
+# ======================
+# 网络性能测试工具
+# ======================
+CONFIG_PACKAGE_netperf=y
+CONFIG_PACKAGE_sockperf=y
+CONFIG_PACKAGE_mtr=y
+CONFIG_PACKAGE_iftop=y
+CONFIG_PACKAGE_nethogs=y
+CONFIG_PACKAGE_bandwidthd=y
+CONFIG_PACKAGE_bmon=y
