--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -414,7 +414,7 @@ CONFIG_PACKAGE_bpftool=y
 CONFIG_PACKAGE_bpf-headers=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_xdp-tools=y
+#CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_xdp-filter=y
 CONFIG_PACKAGE_xdp-loader=y
 CONFIG_PACKAGE_xdpdump=y
