--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -410,14 +410,26 @@ CONFIG_PACKAGE_pciutils=y
 # ======================
 # BPF和XDP用户态工具
 # ======================
+CONFIG_PACKAGE_bpftool=y
 CONFIG_PACKAGE_bpf-headers=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_xdp-filter=y
 CONFIG_PACKAGE_xdp-loader=y
 CONFIG_PACKAGE_xdpdump=y
 CONFIG_PACKAGE_bpftrace=y
 CONFIG_PACKAGE_ebpf=y
+
+# ======================
+# 性能监控与调试工具
+# ======================
+CONFIG_PACKAGE_perf=y
+CONFIG_PACKAGE_trace-cmd=y
+CONFIG_PACKAGE_libpfm4=y
+CONFIG_PACKAGE_linux-tools=y
+CONFIG_PACKAGE_linux-tools-perf=y
+CONFIG_PACKAGE_linux-tools-bpftool=y
 
 # ======================
 # LuCI应用模块 (网络优化版)
@@ -433,3 +445,14 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
+
+# ======================
+# 网络性能测试工具
+# ======================
+CONFIG_PACKAGE_netperf=y
+CONFIG_PACKAGE_sockperf=y
+CONFIG_PACKAGE_mtr=y
+CONFIG_PACKAGE_iftop=y
+CONFIG_PACKAGE_nethogs=y
+CONFIG_PACKAGE_bandwidthd=y
+CONFIG_PACKAGE_bmon=y
