--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -16,9 +16,9 @@ CONFIG_GRUB_TIMEOUT=1
 # ======================
 CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_TOOLCHAINOPTS=y
-CONFIG_GCC_USE_GRAPHITE=y
-CONFIG_USE_LTO=y
-CONFIG_KERNEL_LTO=y
+CONFIG_GCC_USE_GRAPHITE=n
+CONFIG_USE_LTO=n
+CONFIG_KERNEL_LTO=n
 CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe"
 CONFIG_OPTIMIZE_INLINING=y
 
