更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -17,8 +17,8 @@ CONFIG_GRUB_TIMEOUT=1
 CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_GCC_USE_GRAPHITE=y
-CONFIG_USE_LTO=y
-CONFIG_KERNEL_LTO=y
+#CONFIG_USE_LTO=y
+#CONFIG_KERNEL_LTO=y
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta"
 
