更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -225,6 +225,7 @@ CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
 CONFIG_NF_CONNTRACK_TIMEOUT=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_NAT=y
