更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -247,6 +247,7 @@ CONFIG_NFT_OFFLOAD=y
 CONFIG_NFT_XFRM=y
 CONFIG_NFT_QUEUE=y
 CONFIG_NFT_COMPAT=y
+CONFIG_NFT_NAT=y
 
 # ======================
 # I/O调度与存储优化
