更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -10,6 +10,8 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_TIMEOUT=1
+CONFIG_ALL_KMODS=y
+CONFIG_DEVEL=y
 
 # ======================
 # 编译工具链优化
